@@ -1,5 +1,7 @@
 ??-??-????:
 	enhancement: add rsync options:
+		"append",
+		"append-verify",
 		"chmod",
 		"chown",
 		"copy_dirlinks",
